2010-03-22  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove dead code dealing with POSIX_SIGNALS.
	* atimer.c (set_alarm): Remove dead code, all USG systems define
	POSIX_SIGNALS.
	* data.c (arith_error): Likewise.
	* keyboard.c (input_available_signal, handle_user_signal)
	(interrupt_signal): Likewise.
	* process.c (sigchld_handler): Likewise.
	(create_process): Remove if 0 code.  Remove HPUX conditional when
	!defined (POSIX_SIGNALS), it cannot be true.
	* syssignal.h: Remove USG5_4 and USG conditionals when
	!POSIX_SIGNALS, they cannot be true.

	* keyboard.c (Fset_input_interrupt_mode): Remove code depending on
	NO_SOCK_SIGIO, not used anymore.

2010-03-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/vax.h (BSD_SYSTEM, BSD4_2): Remove conditionals, we only
	support vax on BSDs.

	* m/ibmrs6000.h (ORDINARY_LINK): Move definition ...
	* s/aix4-2.h (ORDINARY_LINK): ... here.

2010-03-21  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (abs_builddir): Define.
	(bootstrap_exe): Use it.
	(VPATH): Use $(srcdir) instead of @srcdir@.

2010-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (bootstrap_exe): Use an absolute name.

2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for old GNU/Linux using libc version 5.
	* m/alpha.h (LINUX_SBRK_BUG): Remove definition.
	* emacs.c (main): Remove code depending on LINUX_SBRK_BUG.

	Consolidate redundant definitions in s/bsd-common.h.
	* s/bsd-common.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Define (or undefine) here instead of
	doing it in all files that include this one.
	* s/gnu.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Remove.
	* s/freebsd.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Remove.